efficientnet testing and dw conv update

--- a/bonsai/models/efficientnet/tests/Efficientnet_segmentation_example.ipynb
+++ b/bonsai/models/efficientnet/tests/Efficientnet_segmentation_example.ipynb
@@ -98,38 +98,37 @@
     "    classes = response.text.strip().split(\"\\n\")\n",
     "    return classes\n",
     "\n",
+    "\n",
     "def preprocess_image(image_url, target_size=(224, 224)):\n",
     "    \"\"\"Download and preprocess an image for EfficientNet inference.\"\"\"\n",
-    "    \n",
-    "    headers = {\n",
-    "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36'\n",
-    "    }\n",
-    "    \n",
+    "\n",
+    "    headers = {\"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36\"}\n",
+    "\n",
     "    response = requests.get(image_url, stream=True, headers=headers)\n",
     "    response.raise_for_status()\n",
     "    image = Image.open(response.raw).convert(\"RGB\")\n",
-    "    \n",
+    "\n",
     "    # Resize to slightly larger, then center crop (more standard approach)\n",
     "    resize_size = int(target_size[0] / 0.875)  # ~256 for 224\n",
     "    image = image.resize((resize_size, resize_size), Image.Resampling.BICUBIC)\n",
-    "    \n",
+    "\n",
     "    # Center crop\n",
     "    left = (resize_size - target_size[0]) // 2\n",
     "    top = (resize_size - target_size[1]) // 2\n",
     "    image = image.crop((left, top, left + target_size[0], top + target_size[1]))\n",
-    "    \n",
+    "\n",
     "    # Convert to array and normalize\n",
     "    image_array = np.array(image).astype(np.float32) / 255.0\n",
-    "    \n",
+    "\n",
     "    # ImageNet normalization\n",
     "    mean = np.array([0.485, 0.456, 0.406])\n",
     "    std = np.array([0.229, 0.224, 0.225])\n",
     "    image_array = (image_array - mean) / std\n",
-    "    \n",
-    "    return jnp.array(image_array[None, ...]), image \n",
     "\n",
-    "imagenet_classes = load_imagenet_classes()\n",
-    "\n"
+    "    return jnp.array(image_array[None, ...]), image\n",
+    "\n",
+    "\n",
+    "imagenet_classes = load_imagenet_classes()"
    ]
   },
   {
@@ -186,7 +185,7 @@
     "from bonsai.models.efficientnet import params as params_lib\n",
     "\n",
     "# 1. Define model name\n",
-    "model_name = 'efficientnet_b0'\n",
+    "model_name = \"efficientnet_b0\"\n",
     "\n",
     "# 2. Create a B0 model instance\n",
     "rngs = nnx.Rngs(0)\n",
@@ -222,7 +221,7 @@
     "print(f\"Output logits shape: {jax_logits.shape}\")\n",
     "print(\"\\n--- Top 5 Predictions (from BONSAI JAX model B0) ---\")\n",
     "for i, (idx, prob) in enumerate(zip(top_indices, top_probs)):\n",
-    "    print(f\"{i+1}. {imagenet_classes[idx]}: {prob:.4f}\")"
+    "    print(f\"{i + 1}. {imagenet_classes[idx]}: {prob:.4f}\")"
    ]
   },
   {
@@ -253,7 +252,7 @@
    "source": [
     "def show_image_with_predictions(image, predictions):\n",
     "    \"\"\"Display image with top-k predictions.\"\"\"\n",
-    "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 6), gridspec_kw={'width_ratios': [3, 2]})\n",
+    "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 6), gridspec_kw={\"width_ratios\": [3, 2]})\n",
     "\n",
     "    # Show image\n",
     "    ax1.imshow(image)\n",
@@ -264,15 +263,16 @@
     "    class_names = [p[0] for p in predictions]\n",
     "    scores = [p[1] for p in predictions]\n",
     "    y_pos = np.arange(len(class_names))\n",
-    "    \n",
-    "    ax2.barh(y_pos, scores, align='center')\n",
+    "\n",
+    "    ax2.barh(y_pos, scores, align=\"center\")\n",
     "    ax2.set_yticks(y_pos, labels=class_names)\n",
     "    ax2.invert_yaxis()  # labels read top-to-bottom\n",
-    "    ax2.set_xlabel('Probability')\n",
-    "    ax2.set_title('Top-5 Predictions')\n",
+    "    ax2.set_xlabel(\"Probability\")\n",
+    "    ax2.set_title(\"Top-5 Predictions\")\n",
     "\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
+    "\n",
     "\n",
     "predictions = [(imagenet_classes[i], p) for i, p in zip(top_indices, top_probs)]\n",
     "show_image_with_predictions(original_image, predictions)"
