ruff: formatting fix

--- a/bonsai/models/densenet121/tests/DenseNet121_ImageNet_validation_example.ipynb
+++ b/bonsai/models/densenet121/tests/DenseNet121_ImageNet_validation_example.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "<a href=\"https://colab.research.google.com/github/jax-ml/bonsai/blob/main/bonsai/models/densenet121/tests/DenseNet121_ImageNet_validation_example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/jax-ml/bonsai/blob/main/bonsai/models/densenet121/tests/DenseNet121_ImageNet_validation_example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,17 +34,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "!pip install -q git+https://github.com/jax-ml/bonsai@main\n",
     "!pip install -q pillow matplotlib requests"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -57,9 +61,7 @@
     "\n",
     "print(f\"JAX version: {jax.__version__}\")\n",
     "print(f\"JAX device: {xla_bridge.get_backend().platform}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,7 +74,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Create images directory\n",
     "os.makedirs(\"./images\", exist_ok=True)\n",
@@ -85,9 +89,7 @@
     "!wget -q -P ./images/ electric_ray.jpg \"https://raw.githubusercontent.com/EliSchwartz/imagenet-sample-images/master/n01496331_electric_ray.JPEG\"\n",
     "\n",
     "\" \".join(os.listdir(\"./images\"))"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,7 +102,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def load_imagenet_classes():\n",
     "    \"\"\"Load ImageNet class names from a common source.\"\"\"\n",
@@ -120,9 +124,7 @@
     "    # Fallback to a subset of common classes\n",
     "    print(\"Could not load ImageNet classes, using fallback\")\n",
     "    imagenet_classes = [f\"class_{i}\" for i in range(1000)]"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,7 +137,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "from flax import nnx\n",
     "\n",
@@ -163,9 +167,7 @@
     "# Load the model\n",
     "model = load_densenet121_model()\n",
     "graphdef, state = nnx.split(model)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -178,7 +180,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def preprocess_image(image_path, target_size=(224, 224)):\n",
     "    \"\"\"Preprocess image for DenseNet-121 inference.\"\"\"\n",
@@ -206,7 +210,7 @@
     "\n",
     "def show_image_with_predictions(image, predictions, top_k=5):\n",
     "    \"\"\"Display image with top-k predictions.\"\"\"\n",
-    "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 6))\n",
+    "    _, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 6))\n",
     "\n",
     "    # Show image\n",
     "    ax1.imshow(image)\n",
@@ -227,9 +231,7 @@
     "\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -242,7 +244,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def classify_image(graphdef, state, image_path, top_k=5):\n",
     "    \"\"\"Classify a single image and return top-k predictions.\"\"\"\n",
@@ -291,9 +295,7 @@
     "\n",
     "    except Exception as e:\n",
     "        print(f\"Error processing {image_file}: {e}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -306,7 +308,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "def batch_classify_images(graphdef, state, image_paths, top_k=5):\n",
     "    \"\"\"Classify multiple images in a single batch.\"\"\"\n",
@@ -358,9 +362,7 @@
     "\n",
     "    # Show individual image with predictions\n",
     "    show_image_with_predictions(image, predictions)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
