--- a/bonsai/models/efficientnet/tests/Efficientnet_segmentation_example.ipynb
+++ b/bonsai/models/efficientnet/tests/Efficientnet_segmentation_example.ipynb
@@ -61,15 +61,16 @@
    ],
    "source": [
     "import os\n",
+    "\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import requests\n",
+    "import timm\n",
     "from flax import nnx\n",
     "from jax.lib import xla_bridge\n",
     "from PIL import Image\n",
-    "import timm\n",
     "\n",
     "print(f\"JAX version: {jax.__version__}\")\n",
     "print(f\"JAX device: {xla_bridge.get_backend().platform}\")"
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +253,7 @@
    "source": [
     "def show_image_with_predictions(image, predictions):\n",
     "    \"\"\"Display image with top-k predictions.\"\"\"\n",
-    "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 6), gridspec_kw={\"width_ratios\": [3, 2]})\n",
+    "    _, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 6), gridspec_kw={\"width_ratios\": [3, 2]})\n",
     "\n",
     "    # Show image\n",
     "    ax1.imshow(image)\n",
