--- a/bonsai/models/resnet50/tests/ResNet50_ImageNet_validation_example.ipynb
+++ b/bonsai/models/resnet50/tests/ResNet50_ImageNet_validation_example.ipynb
@@ -209,7 +209,7 @@
     "\n",
     "def show_image_with_predictions(image, predictions, top_k=5):\n",
     "    \"\"\"Display image with top-k predictions.\"\"\"\n",
-    "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 6))\n",
+    "    _, (ax1, ax2) = plt.subplots(1, 2, figsize=(15, 6))\n",
     "\n",
     "    # Show image\n",
     "    ax1.imshow(image)\n",
