--- a/bonsai/models/vae/tests/VAE_segmentation_example.ipynb
+++ b/bonsai/models/vae/tests/VAE_segmentation_example.ipynb
@@ -26,27 +26,31 @@
    "outputs": [],
    "source": [
     "!pip install -q git+https://github.com/jax-ml/bonsai@main\n",
-    "!pip install -q optax tensorflow-datasets matplotlib\n",
+    "!pip install -q tensorflow-datasets matplotlib\n",
     "!pip install tensorflow -q\n",
     "!pip install --upgrade flax -q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
-    "import optax\n",
+    "import tensorflow as tf\n",
     "import tensorflow_datasets as tfds\n",
     "from flax import nnx\n",
-    "import tensorflow as tf\n",
-    "import os\n",
+    "\n",
+    "from bonsai.models.vae import modeling, params\n",
+    "\n",
     "os.chdir(\"/home/neo/Downloads/CODE_Other_Models/bonsai/bonsai/models/vae\")\n",
-    "sys.path.append('/home/neo/Downloads/CODE_Other_Models/bonsai')\n",
+    "sys.path.append(\"/home/neo/Downloads/CODE_Other_Models/bonsai\")\n",
     "\n",
     "\n",
     "import sys\n",
@@ -100,26 +104,19 @@
     }
    ],
    "source": [
-    "import jax\n",
-    "import jax.numpy as jnp\n",
-    "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf\n",
-    "import tensorflow_datasets as tfds\n",
-    "from flax import nnx\n",
-    "import orbax.checkpoint as ocp\n",
-    "from pathlib import Path\n",
     "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import orbax.checkpoint as ocp\n",
     "\n",
     "bonsai_root = Path.home()\n",
     "if str(bonsai_root) not in sys.path:\n",
     "    sys.path.insert(0, str(bonsai_root))\n",
-    "from bonsai.models.vae import modeling as vae_lib\n",
-    "from bonsai.models.vae import params as params_lib\n",
     "\n",
     "\n",
     "# --- Load 10 images from the MNIST test set ---\n",
     "print(\"Loading 10 MNIST test images...\")\n",
-    "ds = tfds.load('mnist', split='test', as_supervised=True)\n",
+    "ds = tfds.load(\"mnist\", split=\"test\", as_supervised=True)\n",
     "images_list = []\n",
     "labels_list = []\n",
     "\n",
@@ -146,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +161,8 @@
     "print(\"\\nCreating a new model with random weights...\")\n",
     "\n",
     "rngs = nnx.Rngs(params=0, sample=1)\n",
-    "model = params_lib.create_model(cfg=config, rngs=rngs) # This is all you need!\n",
+    "config = modeling.ModelCfg(input_dim=28 * 28, hidden_dims=(512, 256), latent_dim=20)\n",
+    "model = params_lib.create_model(cfg=config, rngs=rngs)  # This is all you need!\n",
     "\n",
     "print(\"New model created successfully!\")"
    ]
@@ -202,9 +200,10 @@
     "    reconstruction_logits_flat, _, _ = model(batch, sample_key=sample_key)\n",
     "\n",
     "    reconstructed_probs_flat = jax.nn.sigmoid(reconstruction_logits_flat)\n",
-    "    \n",
+    "\n",
     "    # Reshape the flat output back to the original image shape\n",
     "    return reconstructed_probs_flat.reshape(batch.shape)\n",
+    "\n",
     "\n",
     "# Get a random key for the reparameterization trick\n",
     "sample_key = rngs.sample()\n",
@@ -253,13 +252,13 @@
     "\n",
     "for i in range(10):\n",
     "    # Plot original images on the first row\n",
-    "    axes[0, i].imshow(image_batch[i, ..., 0], cmap='gray')\n",
+    "    axes[0, i].imshow(image_batch[i, ..., 0], cmap=\"gray\")\n",
     "    axes[0, i].set_title(f\"Label: {labels_list[i]}\")\n",
-    "    axes[0, i].axis('off')\n",
+    "    axes[0, i].axis(\"off\")\n",
     "\n",
     "    # Plot reconstructed images on the second row\n",
-    "    axes[1, i].imshow(reconstructed_images[i, ..., 0], cmap='gray')\n",
-    "    axes[1, i].axis('off')\n",
+    "    axes[1, i].imshow(reconstructed_images[i, ..., 0], cmap=\"gray\")\n",
+    "    axes[1, i].axis(\"off\")\n",
     "\n",
     "# Add row labels\n",
     "axes[0, 0].set_ylabel(\"Original\", fontsize=12, labelpad=15)\n",
