--- a/bonsai/models/efficientnet/tests/Efficientnet_segmentation_example.ipynb
+++ b/bonsai/models/efficientnet/tests/Efficientnet_segmentation_example.ipynb
@@ -63,17 +63,17 @@
     "import os\n",
     "\n",
     "import jax\n",
+    "import jax.extend\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import requests\n",
     "import timm\n",
     "from flax import nnx\n",
-    "from jax.lib import xla_bridge\n",
     "from PIL import Image\n",
     "\n",
     "print(f\"JAX version: {jax.__version__}\")\n",
-    "print(f\"JAX device: {xla_bridge.get_backend().platform}\")"
+    "print(f\"JAX device: {jax.extend.backend.get_backend().platform}\")"
    ]
   },
   {
