--- a/bonsai/models/densenet121/tests/DenseNet121_ImageNet_validation_example.ipynb
+++ b/bonsai/models/densenet121/tests/DenseNet121_ImageNet_validation_example.ipynb
@@ -51,7 +51,6 @@
     "import os\n",
     "\n",
     "import jax\n",
-    "import jax.extend\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -60,7 +59,7 @@
     "from PIL import Image, ImageOps\n",
     "\n",
     "print(f\"JAX version: {jax.__version__}\")\n",
-    "print(f\"JAX device: {jax.extend.backend.get_backend().platform}\")"
+    "print(f\"JAX device: {jax.devices()[0].platform}\")"
    ]
   },
   {
@@ -388,7 +387,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -402,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
