--- a/bonsai/models/resnet50/tests/ResNet50_ImageNet_validation_example.ipynb
+++ b/bonsai/models/resnet50/tests/ResNet50_ImageNet_validation_example.ipynb
@@ -56,11 +56,10 @@
     "import numpy as np\n",
     "import requests\n",
     "from huggingface_hub import snapshot_download\n",
-    "from jax.lib import xla_bridge\n",
     "from PIL import Image, ImageOps\n",
     "\n",
     "print(f\"JAX version: {jax.__version__}\")\n",
-    "print(f\"JAX device: {xla_bridge.get_backend().platform}\")"
+    "print(f\"JAX device: {jax.devices()[0].platform}\")"
    ]
   },
   {
