--- a/bonsai/models/efficientnet/tests/Efficientnet_segmentation_example.ipynb
+++ b/bonsai/models/efficientnet/tests/Efficientnet_segmentation_example.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -69,11 +69,10 @@
     "import requests\n",
     "import timm\n",
     "from flax import nnx\n",
-    "from jax.lib import xla_bridge\n",
     "from PIL import Image\n",
     "\n",
     "print(f\"JAX version: {jax.__version__}\")\n",
-    "print(f\"JAX device: {xla_bridge.get_backend().platform}\")"
+    "print(f\"JAX device: {jax.devices()[0].platform}\")"
    ]
   },
   {
@@ -301,7 +300,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bonsai",
+   "display_name": "venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
