--- a/bonsai/models/unet/tests/UNet_segmentation_example.ipynb
+++ b/bonsai/models/unet/tests/UNet_segmentation_example.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Image Segmentation with U-Net**\n",
+    "# **Image Segmentation with U-Net (Work in progress)**\n",
+    "\n",
+    "This notebook is work in progress. ([#73](https://github.com/jax-ml/bonsai/issues/73))",
     "\n",
     "This notebook demonstrates how to use the U-Net model from the Bonsai library to perform a simple image segmentation task.\n",
     "\n",
