pre-commit fixes

--- a/bonsai/models/unet/tests/UNet_segmentation_example.ipynb
+++ b/bonsai/models/unet/tests/UNet_segmentation_example.ipynb
@@ -69,30 +69,24 @@
     }
    ],
    "source": [
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from flax import nnx\n",
-    "from jax.lib import xla_bridge\n",
-    "import jax\n",
-    "import jax.numpy as jnp\n",
-    "from tqdm import tqdm\n",
     "import optax\n",
     "import orbax.checkpoint as ocp\n",
     "import tensorflow as tf\n",
     "import tensorflow_datasets as tfds\n",
     "from flax import nnx\n",
-    "from pathlib import Path\n",
-    "import os\n",
+    "from flax.training.train_state import TrainState\n",
+    "from jax.lib import xla_bridge\n",
+    "from tqdm import tqdm\n",
     "\n",
     "from bonsai.models.unet import modeling as unet_lib\n",
     "from bonsai.models.unet import params as params_lib\n",
-    "\n",
-    "import optax\n",
-    "from flax.training.train_state import TrainState\n",
-    "from pathlib import Path\n",
-    "import os\n",
     "\n",
     "print(f\"JAX version: {jax.__version__}\")\n",
     "print(f\"JAX device: {xla_bridge.get_backend().platform}\")"
@@ -260,20 +254,20 @@
     }
    ],
    "source": [
-    "# --- 1. Dataset Loading and Preprocessing ---\n",
     "IMAGE_SIZE = 128\n",
     "BATCH_SIZE = 8\n",
     "\n",
+    "\n",
     "def load_dataset(batch_size=BATCH_SIZE, image_size=IMAGE_SIZE):\n",
     "    \"\"\"Loads and preprocesses a subset of the Oxford-IIIT Pet dataset.\"\"\"\n",
-    "    ds_builder = tfds.builder('oxford_iiit_pet')\n",
+    "    ds_builder = tfds.builder(\"oxford_iiit_pet\")\n",
     "    ds_builder.download_and_prepare()\n",
     "    # Using smaller splits for faster demonstration\n",
-    "    train_split, test_split = ds_builder.as_dataset(split=['train[:50%]', 'test[:50%]'])\n",
+    "    train_split, test_split = ds_builder.as_dataset(split=[\"train[:50%]\", \"test[:50%]\"])\n",
     "\n",
     "    def preprocess(sample):\n",
-    "        image = tf.image.resize(sample['image'], (image_size, image_size))\n",
-    "        mask = tf.image.resize(sample['segmentation_mask'], (image_size, image_size), method='nearest')\n",
+    "        image = tf.image.resize(sample[\"image\"], (image_size, image_size))\n",
+    "        mask = tf.image.resize(sample[\"segmentation_mask\"], (image_size, image_size), method=\"nearest\")\n",
     "        image = tf.cast(image, tf.float32) / 255.0\n",
     "        # The mask values are 1, 2, 3. We subtract 1 to make them 0, 1, 2.\n",
     "        mask = tf.squeeze(mask - 1, axis=-1)\n",
@@ -283,13 +277,13 @@
     "    test_ds = test_split.map(preprocess).batch(batch_size).prefetch(tf.data.AUTOTUNE)\n",
     "    return tfds.as_numpy(train_ds), tfds.as_numpy(test_ds)\n",
     "\n",
-    "# --- 2. Loss Function for Segmentation  ---\n",
+    "\n",
     "def segmentation_loss(logits: jax.Array, labels: jax.Array) -> jax.Array:\n",
     "    \"\"\"Computes softmax cross-entropy loss for segmentation.\"\"\"\n",
     "    loss = optax.softmax_cross_entropy_with_integer_labels(logits, labels)\n",
     "    return jnp.mean(loss)\n",
     "\n",
-    "# --- 3. Model and Optimizer Setup  ---\n",
+    "\n",
     "config = unet_lib.ModelCfg(in_channels=3, num_classes=3)\n",
     "rngs = nnx.Rngs(0)\n",
     "\n",
@@ -302,30 +296,26 @@
     "# This is how you get the initial, random weights for training from scratch.\n",
     "params = model_state.filter(nnx.Param)\n",
     "\n",
-    "# Extract non-trainable variables \n",
+    "# Extract non-trainable variables\n",
     "other_vars = model_state.filter(lambda path, value: not isinstance(value, nnx.Param))\n",
     "\n",
     "optimizer = optax.adam(learning_rate=1e-3)\n",
     "\n",
-    "train_state = TrainState.create(\n",
-    "    apply_fn=graphdef.apply,\n",
-    "    params=params,\n",
-    "    tx=optimizer\n",
-    ")\n",
+    "train_state = TrainState.create(apply_fn=graphdef.apply, params=params, tx=optimizer)\n",
     "\n",
-    "# --- 4. JIT-compiled Training Step ---\n",
+    "\n",
     "@jax.jit\n",
     "def train_step(state: TrainState, other_vars: nnx.State, batch: tuple[jax.Array, jax.Array]):\n",
     "    \"\"\"Performs a single training step.\"\"\"\n",
     "    images, masks = batch\n",
-    "    \n",
+    "\n",
     "    def loss_fn(params):\n",
     "        # Recombine the graph, TRAINED params, and OTHER_VARS to build the full model\n",
     "        model = nnx.merge(graphdef, params, other_vars)\n",
-    "        \n",
+    "\n",
     "        # Forward pass, converting the output proxy to a JAX array\n",
     "        logits = jnp.asarray(model(images))\n",
-    "        \n",
+    "\n",
     "        # Calculate loss\n",
     "        loss = segmentation_loss(logits, masks)\n",
     "        return loss\n",
@@ -335,17 +325,17 @@
     "    state = state.apply_gradients(grads=grads)\n",
     "    return state, loss\n",
     "\n",
-    "# --- 5. Training Loop (Unchanged) ---\n",
+    "\n",
     "print(\" Starting training from scratch...\")\n",
-    "train_loader, _ = load_dataset() \n",
-    "num_epochs = 100 \n",
+    "train_loader, _ = load_dataset()\n",
+    "num_epochs = 100\n",
     "state = train_state\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    total_loss = 0\n",
     "    batch_count = 0\n",
     "\n",
-    "    pbar = tqdm(train_loader, desc=f\"Epoch {epoch+1}/{num_epochs}\")\n",
+    "    pbar = tqdm(train_loader, desc=f\"Epoch {epoch + 1}/{num_epochs}\")\n",
     "    for images, masks in pbar:\n",
     "        state, loss = train_step(state, other_vars, (images, masks))\n",
     "        total_loss += loss\n",
@@ -387,8 +377,7 @@
     }
    ],
    "source": [
-    "# --- 6. Saving the Final Trained State ---\n",
-    "ckpt_dir = Path('./checkpoints')\n",
+    "ckpt_dir = Path(\"./checkpoints\")\n",
     "ckpt_dir.mkdir(exist_ok=True)\n",
     "\n",
     "# Use Orbax to save the PyTree of the model's parameters directly\n",
@@ -565,69 +554,40 @@
    "source": [
     "###### TRAIN BY LOADING PRE TRAINED WEIGHTS ######\n",
     "\n",
-    "import os\n",
     "import sys\n",
     "from pathlib import Path\n",
     "\n",
     "import jax\n",
-    "import jax.numpy as jnp\n",
-    "import matplotlib.pyplot as plt\n",
     "import optax\n",
     "import orbax.checkpoint as ocp\n",
-    "import tensorflow as tf\n",
-    "import tensorflow_datasets as tfds\n",
     "from flax import nnx\n",
     "from flax.training.train_state import TrainState\n",
     "\n",
     "from bonsai.models.unet import modeling as unet_lib\n",
     "from bonsai.models.unet import params as params_lib\n",
     "\n",
-    "\n",
-    "# --- 1. Dataset Loading and Preprocessing (Unchanged) ---\n",
     "IMAGE_SIZE = 128\n",
     "BATCH_SIZE = 8\n",
     "\n",
     "\n",
     "def load_dataset(batch_size=BATCH_SIZE, image_size=IMAGE_SIZE):\n",
     "    \"\"\"Loads and preprocesses a subset of the Oxford-IIIT Pet dataset.\"\"\"\n",
-    "    ds_builder = tfds.builder('oxford_iiit_pet')\n",
+    "    ds_builder = tfds.builder(\"oxford_iiit_pet\")\n",
     "    ds_builder.download_and_prepare()\n",
-    "    train_split, test_split = ds_builder.as_dataset(split=['train', 'test'])\n",
+    "    train_split, test_split = ds_builder.as_dataset(split=[\"train\", \"test\"])\n",
     "\n",
     "    def preprocess(sample):\n",
-    "        image = tf.image.resize(sample['image'], (image_size, image_size))\n",
-    "        mask = tf.image.resize(\n",
-    "            sample['segmentation_mask'], (image_size, image_size), method='nearest'\n",
-    "        )\n",
+    "        image = tf.image.resize(sample[\"image\"], (image_size, image_size))\n",
+    "        mask = tf.image.resize(sample[\"segmentation_mask\"], (image_size, image_size), method=\"nearest\")\n",
     "        image = tf.cast(image, tf.float32) / 255.0\n",
     "        mask = tf.squeeze(mask - 1, axis=-1)\n",
     "        return image, mask\n",
     "\n",
-    "    train_ds = (\n",
-    "        train_split\n",
-    "        .map(preprocess)\n",
-    "        .cache()\n",
-    "        .shuffle(10)\n",
-    "        .batch(batch_size)\n",
-    "        .prefetch(tf.data.AUTOTUNE)\n",
-    "    )\n",
-    "    test_ds = (\n",
-    "        test_split\n",
-    "        .map(preprocess)\n",
-    "        .batch(batch_size)\n",
-    "        .prefetch(tf.data.AUTOTUNE)\n",
-    "    )\n",
+    "    train_ds = train_split.map(preprocess).cache().shuffle(10).batch(batch_size).prefetch(tf.data.AUTOTUNE)\n",
+    "    test_ds = test_split.map(preprocess).batch(batch_size).prefetch(tf.data.AUTOTUNE)\n",
     "    return tfds.as_numpy(train_ds), tfds.as_numpy(test_ds)\n",
     "\n",
     "\n",
-    "# --- 2. Loss Function for Segmentation (Unchanged) ---\n",
-    "def segmentation_loss(logits: jax.Array, labels: jax.Array) -> jax.Array:\n",
-    "    \"\"\"Computes softmax cross-entropy loss for segmentation.\"\"\"\n",
-    "    loss = optax.softmax_cross_entropy_with_integer_labels(logits, labels)\n",
-    "    return jnp.mean(loss)\n",
-    "\n",
-    "\n",
-    "# --- 3. Model and Optimizer Setup (Corrected) ---\n",
     "config = unet_lib.ModelCfg(in_channels=3, num_classes=3)\n",
     "rngs = nnx.Rngs(0)\n",
     "\n",
@@ -639,9 +599,7 @@
     "other_vars = model_state.filter(lambda path, value: not isinstance(value, nnx.Param))\n",
     "\n",
     "# Load the TRAINED parameters from your checkpoint\n",
-    "ckpt_dir = Path(\n",
-    "    './checkpoints'\n",
-    ")\n",
+    "ckpt_dir = Path(\"./checkpoints\")\n",
     "checkpointer = ocp.PyTreeCheckpointer()\n",
     "# The checkpoint correctly contains only the parameters, as saved by the example notebook\n",
     "loaded_params = checkpointer.restore(ckpt_dir)\n",
@@ -649,16 +607,11 @@
     "optimizer = optax.adam(learning_rate=0.2e-3)\n",
     "\n",
     "# Initialize the TrainState with the LOADED parameters\n",
-    "train_state = TrainState.create(\n",
-    "    apply_fn=graphdef.apply, params=loaded_params, tx=optimizer\n",
-    ")\n",
+    "train_state = TrainState.create(apply_fn=graphdef.apply, params=loaded_params, tx=optimizer)\n",
     "\n",
     "\n",
-    "# --- 4. JIT-compiled Training Step (Corrected) ---\n",
     "@jax.jit\n",
-    "def train_step(\n",
-    "    state: TrainState, other_vars: nnx.State, batch: tuple[jax.Array, jax.Array]\n",
-    "):\n",
+    "def train_step(state: TrainState, other_vars: nnx.State, batch: tuple[jax.Array, jax.Array]):\n",
     "    \"\"\"Performs a single training step.\"\"\"\n",
     "    images, masks = batch\n",
     "\n",
@@ -679,7 +632,6 @@
     "    return state, loss\n",
     "\n",
     "\n",
-    "# --- 5. Training Loop (Corrected) ---\n",
     "print(\"🚀 Starting training from checkpoint...\")\n",
     "train_loader, vis_loader = load_dataset()\n",
     "num_epochs = 100\n",
@@ -694,7 +646,7 @@
     "        total_loss += loss\n",
     "        batch_count += 1\n",
     "    avg_loss = total_loss / batch_count\n",
-    "    print(f\"Epoch {epoch+1}/{num_epochs}, Average Loss: {avg_loss:.4f}\")\n",
+    "    print(f\"Epoch {epoch + 1}/{num_epochs}, Average Loss: {avg_loss:.4f}\")\n",
     "\n",
     "print(\"Training finished!\")"
    ]
@@ -723,42 +675,43 @@
     }
    ],
    "source": [
-    "import jax\n",
-    "import jax.numpy as jnp\n",
-    "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf\n",
-    "import tensorflow_datasets as tfds\n",
-    "from flax import nnx\n",
-    "import orbax.checkpoint as ocp\n",
     "from pathlib import Path\n",
+    "\n",
+    "import jax\n",
+    "import orbax.checkpoint as ocp\n",
+    "from flax import nnx\n",
+    "\n",
     "from bonsai.models.unet import modeling as unet_lib\n",
     "from bonsai.models.unet import params as params_lib\n",
     "\n",
-    "# --- (This is the same data loading function from your training script) ---\n",
     "IMAGE_SIZE = 128\n",
+    "\n",
+    "\n",
     "def load_test_data(num_images):\n",
-    "    ds_builder = tfds.builder('oxford_iiit_pet')\n",
+    "    ds_builder = tfds.builder(\"oxford_iiit_pet\")\n",
     "    ds_builder.download_and_prepare()\n",
-    "    test_split = ds_builder.as_dataset(split='test')\n",
+    "    test_split = ds_builder.as_dataset(split=\"test\")\n",
+    "\n",
     "    def preprocess(sample):\n",
-    "        image = tf.image.resize(sample['image'], (IMAGE_SIZE, IMAGE_SIZE))\n",
+    "        image = tf.image.resize(sample[\"image\"], (IMAGE_SIZE, IMAGE_SIZE))\n",
     "        image = tf.cast(image, tf.float32) / 255.0\n",
     "        return image\n",
-    "    buffer_size = ds_builder.info.splits['test'].num_examples\n",
+    "\n",
+    "    buffer_size = ds_builder.info.splits[\"test\"].num_examples\n",
     "    test_ds = test_split.shuffle(buffer_size).map(preprocess).take(num_images).batch(num_images)\n",
     "    return next(iter(tfds.as_numpy(test_ds)))\n",
     "\n",
-    "# --- 2. Define Model and Load Weights ---\n",
+    "\n",
     "print(\"Loading model and weights...\")\n",
     "\n",
     "# Define the path to your saved checkpoints\n",
-    "ckpt_dir = Path('./checkpoints')\n",
+    "ckpt_dir = Path(\"./checkpoints\")\n",
     "\n",
     "# This provides the necessary structure (the \"graphdef\").\n",
     "config = unet_lib.ModelCfg(in_channels=3, num_classes=3)\n",
     "rngs = nnx.Rngs(params=0)\n",
     "template_model = params_lib.create_model(cfg=config, rngs=rngs)\n",
-    "graphdef, _ = nnx.split(template_model) # We only need the static graphdef\n",
+    "graphdef, _ = nnx.split(template_model)  # We only need the static graphdef\n",
     "\n",
     "# b. Restore the saved parameters using Orbax.\n",
     "checkpointer = ocp.PyTreeCheckpointer()\n",
@@ -767,9 +720,7 @@
     "\n",
     "# c. Merge the graphdef with the loaded parameters to create a complete, trained model.\n",
     "inference_model = nnx.merge(graphdef, loaded_params)\n",
-    "print(\" Model loaded successfully!\")\n",
-    "\n",
-    "\n"
+    "print(\" Model loaded successfully!\")"
    ]
   },
   {
@@ -797,11 +748,11 @@
     }
    ],
    "source": [
-    "# --- 3. Prepare Data and Predict ---\n",
     "print(\"\\n Preparing data and running prediction...\")\n",
     "\n",
     "# a. Load a batch of 5 images from the test set.\n",
     "image_batch = load_test_data(num_images=10)\n",
+    "\n",
     "\n",
     "# b. Define the JIT-compiled prediction function.\n",
     "@jax.jit\n",
@@ -810,11 +761,11 @@
     "    # Get the predicted class (0, 1, or 2) for each pixel\n",
     "    return jnp.argmax(logits, axis=-1)\n",
     "\n",
+    "\n",
     "# c. Run the prediction.\n",
     "predicted_masks = predict(inference_model, image_batch)\n",
     "\n",
-    "print(f\" Prediction complete. Output shape: {predicted_masks.shape}\")\n",
-    "\n"
+    "print(f\" Prediction complete. Output shape: {predicted_masks.shape}\")"
    ]
   },
   {
@@ -850,23 +801,21 @@
     }
    ],
    "source": [
-    "\n",
-    "# --- 4. Visualize the Results ---\n",
     "print(\" Displaying results...\")\n",
     "fig, axes = plt.subplots(2, 10, figsize=(20, 8))\n",
     "for i in range(10):\n",
     "    # Plot original image\n",
     "    axes[0, i].imshow(image_batch[i])\n",
-    "    axes[0, i].set_title(f\"Input Image {i+1}\")\n",
-    "    axes[0, i].axis('off')\n",
+    "    axes[0, i].set_title(f\"Input Image {i + 1}\")\n",
+    "    axes[0, i].axis(\"off\")\n",
     "\n",
     "    # Plot predicted mask\n",
-    "    axes[1, i].imshow(predicted_masks[i], cmap='viridis')\n",
-    "    axes[1, i].set_title(f\"Predicted Mask {i+1}\")\n",
-    "    axes[1, i].axis('off')\n",
+    "    axes[1, i].imshow(predicted_masks[i], cmap=\"viridis\")\n",
+    "    axes[1, i].set_title(f\"Predicted Mask {i + 1}\")\n",
+    "    axes[1, i].axis(\"off\")\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('unet_segmentation_results.png', dpi=150)\n",
+    "plt.savefig(\"unet_segmentation_results.png\", dpi=150)\n",
     "plt.show()\n",
     "\n",
     "print(\"\\nFigure saved as 'unet_segmentation_results.png'\")"
