vgg and resnet consistency

--- a/bonsai/models/resnet/tests/ResNet50_ImageNet_validation_example.ipynb
+++ b/bonsai/models/resnet/tests/ResNet50_ImageNet_validation_example.ipynb
@@ -140,31 +140,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bonsai.models.resnet50 import modeling as model_lib\n",
-    "from bonsai.models.resnet50 import params\n",
+    "from bonsai.models.resnet import modeling as model_lib\n",
+    "from bonsai.models.resnet import params\n",
     "\n",
-    "\n",
-    "def load_resnet50_model():\n",
-    "    \"\"\"Load the pre-trained ResNet-50 model.\"\"\"\n",
-    "    # Download model weights\n",
-    "    model_name = \"microsoft/resnet-50\"\n",
-    "    model_path = \"/tmp/models-bonsai/resnet-50\"\n",
-    "\n",
-    "    if not os.path.isdir(model_path):\n",
-    "        print(f\"Downloading {model_name}...\")\n",
-    "        snapshot_download(model_name, local_dir=model_path)\n",
-    "        print(\"Download complete!\")\n",
-    "\n",
-    "    # Load the model\n",
-    "    safetensors_path = os.path.join(model_path, \"model.safetensors\")\n",
-    "    model = params.create_resnet50_from_pretrained(safetensors_path)\n",
-    "\n",
-    "    print(\"ResNet-50 model loaded successfully!\")\n",
-    "    return model\n",
-    "\n",
-    "\n",
-    "# Load the model\n",
-    "model = load_resnet50_model()"
+    "model_ckpt_path = snapshot_download(\"microsoft/resnet-50\")\n",
+    "config = model_lib.ModelCfg.resnet50()\n",
+    "model = params.create_resnet_from_pretrained(model_ckpt_path, config)"
    ]
   },
   {
@@ -386,7 +367,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -400,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
