ModelCfg -> ModelConfig. Efficientnet jit. Simplified Efficientnet params.

--- a/bonsai/models/densenet121/tests/DenseNet121_ImageNet_validation_example.ipynb
+++ b/bonsai/models/densenet121/tests/DenseNet121_ImageNet_validation_example.ipynb
@@ -156,7 +156,7 @@
     "    print(\"Download complete!\")\n",
     "\n",
     "    # Load the model\n",
-    "    config = model_lib.ModelCfg.densenet_121()\n",
+    "    config = model_lib.ModelConfig.densenet_121()\n",
     "    model = params.create_model_from_h5(model_ckpt_path, config)\n",
     "\n",
     "    print(\"DenseNet-121 model loaded successfully!\")\n",
