--- a/bonsai/models/efficientnet/tests/EfficientNet_ImageNet_validation_example.ipynb
+++ b/bonsai/models/efficientnet/tests/EfficientNet_ImageNet_validation_example.ipynb
@@ -121,33 +121,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Input image shape: (1, 224, 224, 3)\n",
-      "Output logits shape: (1, 1000)\n",
-      "\n",
-      "--- Top 5 Predictions (from BONSAI JAX model B0) ---\n",
-      "1. giant_panda, panda, panda_bear, coon_bear, Ailuropoda_melanoleuca: 0.8815\n",
-      "2. brown_bear, bruin, Ursus_arctos: 0.0048\n",
-      "3. lesser_panda, red_panda, panda, bear_cat, cat_bear, Ailurus_fulgens: 0.0034\n",
-      "4. ice_bear, polar_bear, Ursus_Maritimus, Thalarctos_maritimus: 0.0023\n",
-      "5. sloth_bear, Melursus_ursinus, Ursus_ursinus: 0.0013\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import model creation and weight loading functions\n",
     "from bonsai.models.efficientnet import modeling\n",
     "from bonsai.models.efficientnet import params as params_lib\n",
     "\n",
     "# 1. Define model name\n",
-    "config = modeling.ModelCfg.b0()\n",
-    "jax_model = params_lib.create_efficientnet_from_pretrained(\"efficientnet_b0\", config, mesh=None)\n",
+    "jax_model = params_lib.create_efficientnet_from_pretrained(0)\n",
     "\n",
     "# Prepare the input image\n",
     "image_url = \"https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Giant_Panda_2004-03-2.jpg/1024px-Giant_Panda_2004-03-2.jpg\"\n",
@@ -187,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
