--- a/bonsai/models/resnet/tests/ResNet50_ImageNet_validation_example.ipynb
+++ b/bonsai/models/resnet/tests/ResNet50_ImageNet_validation_example.ipynb
@@ -144,7 +144,7 @@
     "from bonsai.models.resnet import params\n",
     "\n",
     "model_ckpt_path = snapshot_download(\"microsoft/resnet-50\")\n",
-    "config = model_lib.ModelCfg.resnet50()\n",
+    "config = model_lib.ModelConfig.resnet50()\n",
     "model = params.create_resnet_from_pretrained(model_ckpt_path, config)"
    ]
   },
