--- a/bonsai/models/unet/tests/UNet_segmentation_example.ipynb
+++ b/bonsai/models/unet/tests/UNet_segmentation_example.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "# **Image Segmentation with U-Net (Work in progress)**\n",
     "\n",
-    "This notebook is work in progress. ([#73](https://github.com/jax-ml/bonsai/issues/73))",
+    "This notebook is work in progress. ([#73](https://github.com/jax-ml/bonsai/issues/73))\n",
     "\n",
     "This notebook demonstrates how to use the U-Net model from the Bonsai library to perform a simple image segmentation task.\n",
     "\n",
@@ -284,7 +284,7 @@
     "    return jnp.mean(loss)\n",
     "\n",
     "\n",
-    "config = unet_lib.ModelCfg(in_channels=3, num_classes=3)\n",
+    "config = unet_lib.ModelConfig(in_channels=3, num_classes=3)\n",
     "rngs = nnx.Rngs(0)\n",
     "\n",
     "# Create the model from scratch with random initial weights\n",
@@ -588,7 +588,7 @@
     "    return tfds.as_numpy(train_ds), tfds.as_numpy(test_ds)\n",
     "\n",
     "\n",
-    "config = unet_lib.ModelCfg(in_channels=3, num_classes=3)\n",
+    "config = unet_lib.ModelConfig(in_channels=3, num_classes=3)\n",
     "rngs = nnx.Rngs(0)\n",
     "\n",
     "# Create a template model to get BOTH the graphdef and other_vars\n",
@@ -708,7 +708,7 @@
     "ckpt_dir = Path(\"./checkpoints\")\n",
     "\n",
     "# This provides the necessary structure (the \"graphdef\").\n",
-    "config = unet_lib.ModelCfg(in_channels=3, num_classes=3)\n",
+    "config = unet_lib.ModelConfig(in_channels=3, num_classes=3)\n",
     "rngs = nnx.Rngs(params=0)\n",
     "template_model = params_lib.create_model(cfg=config, rngs=rngs)\n",
     "graphdef, _ = nnx.split(template_model)  # We only need the static graphdef\n",
