--- a/bonsai/models/vgg19/tests/VGG19_ImageNet_validation_example.ipynb
+++ b/bonsai/models/vgg19/tests/VGG19_ImageNet_validation_example.ipynb
@@ -146,7 +146,7 @@
     "from bonsai.models.vgg19 import params\n",
     "\n",
     "model_ckpt_path = snapshot_download(\"keras/vgg_19_imagenet\")\n",
-    "config = model_lib.ModelCfg.vgg_19()\n",
+    "config = model_lib.ModelConfig.vgg_19()\n",
     "model = params.create_model_from_h5(model_ckpt_path, config)\n",
     "graphdef, state = nnx.split(model)"
    ]
