--- a/bonsai/models/vae/tests/VAE_segmentation_example.ipynb
+++ b/bonsai/models/vae/tests/VAE_segmentation_example.ipynb
@@ -161,7 +161,7 @@
     "print(\"\\nCreating a new model with random weights...\")\n",
     "\n",
     "rngs = nnx.Rngs(params=0, sample=1)\n",
-    "config = modeling.ModelCfg(input_dim=28 * 28, hidden_dims=(512, 256), latent_dim=20)\n",
+    "config = modeling.ModelConfig(input_dim=28 * 28, hidden_dims=(512, 256), latent_dim=20)\n",
     "model = params_lib.create_model(cfg=config, rngs=rngs)  # This is all you need!\n",
     "\n",
     "print(\"New model created successfully!\")"
