--- a/bonsai/models/vgg19/tests/VGG19_ImageNet_validation_example.ipynb
+++ b/bonsai/models/vgg19/tests/VGG19_ImageNet_validation_example.ipynb
@@ -145,26 +145,9 @@
     "from bonsai.models.vgg19 import modeling as model_lib\n",
     "from bonsai.models.vgg19 import params\n",
     "\n",
-    "\n",
-    "def load_vgg19_model():\n",
-    "    \"\"\"Load the pre-trained VGG-19 model.\"\"\"\n",
-    "    # Download model weights\n",
-    "    model_name = \"keras/vgg_19_imagenet\"\n",
-    "\n",
-    "    print(f\"Downloading {model_name}...\")\n",
-    "    model_ckpt_path = snapshot_download(model_name)\n",
-    "    print(\"Download complete!\")\n",
-    "\n",
-    "    # Load the model\n",
-    "    config = model_lib.ModelCfg.vgg_19()\n",
-    "    model = params.create_model_from_h5(model_ckpt_path, config)\n",
-    "\n",
-    "    print(\"VGG-19 model loaded successfully!\")\n",
-    "    return model\n",
-    "\n",
-    "\n",
-    "# Load the model\n",
-    "model = load_vgg19_model()\n",
+    "model_ckpt_path = snapshot_download(\"keras/vgg_19_imagenet\")\n",
+    "config = model_lib.ModelConfig.vgg_19()\n",
+    "model = params.create_model_from_h5(model_ckpt_path, config)\n",
     "graphdef, state = nnx.split(model)"
    ]
   },
@@ -387,7 +370,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.12.8)",
    "language": "python",
    "name": "python3"
   },
@@ -401,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
