Add jupytext support for better ipynb version control

--- a/bonsai/models/densenet121/tests/DenseNet121_ImageNet_validation_example.ipynb
+++ b/bonsai/models/densenet121/tests/DenseNet121_ImageNet_validation_example.ipynb
@@ -386,6 +386,9 @@
    "private_outputs": true,
    "provenance": []
   },
+  "jupytext": {
+   "default_lexer": "ipython3"
+  },
   "kernelspec": {
    "display_name": "venv (3.12.8)",
    "language": "python",
