--- a/bonsai/models/efficientnet/tests/EfficientNet_ImageNet_validation_example.ipynb
+++ b/bonsai/models/efficientnet/tests/EfficientNet_ImageNet_validation_example.ipynb
@@ -126,7 +126,6 @@
    "outputs": [],
    "source": [
     "# Import model creation and weight loading functions\n",
-    "from bonsai.models.efficientnet import modeling\n",
     "from bonsai.models.efficientnet import params as params_lib\n",
     "\n",
     "# 1. Define model name\n",
@@ -226,14 +225,12 @@
     "3. **Perform a forward pass** to get classification logits.\n",
     "4. **Visualize the output**, confirming the model's end-to-end pipeline is functional."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
+  "jupytext": {
+   "default_lexer": "ipython3"
+  },
   "kernelspec": {
    "display_name": "venv (3.12.8)",
    "language": "python",
