--- a/bonsai/models/vae/tests/VAE_segmentation_example.ipynb
+++ b/bonsai/models/vae/tests/VAE_segmentation_example.ipynb
@@ -47,7 +47,7 @@
     "import tensorflow_datasets as tfds\n",
     "from flax import nnx\n",
     "\n",
-    "from bonsai.models.vae import modeling, params\n",
+    "from bonsai.models.vae import modeling\n",
     "\n",
     "os.chdir(\"/home/neo/Downloads/CODE_Other_Models/bonsai/bonsai/models/vae\")\n",
     "sys.path.append(\"/home/neo/Downloads/CODE_Other_Models/bonsai\")\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,6 @@
     "import sys\n",
     "from pathlib import Path\n",
     "\n",
-    "import orbax.checkpoint as ocp\n",
     "\n",
     "bonsai_root = Path.home()\n",
     "if str(bonsai_root) not in sys.path:\n",
@@ -287,6 +286,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "default_lexer": "ipython3"
+  },
   "kernelspec": {
    "display_name": "bonsai",
    "language": "python",
