--- a/bonsai/models/resnet/tests/ResNet50_ImageNet_validation_example.ipynb
+++ b/bonsai/models/resnet/tests/ResNet50_ImageNet_validation_example.ipynb
@@ -366,6 +366,9 @@
    "private_outputs": true,
    "provenance": []
   },
+  "jupytext": {
+   "default_lexer": "ipython3"
+  },
   "kernelspec": {
    "display_name": "venv (3.12.8)",
    "language": "python",
