--- a/bonsai/models/vae/tests/VAE_segmentation_example.ipynb
+++ b/bonsai/models/vae/tests/VAE_segmentation_example.ipynb
@@ -128,7 +128,7 @@
     "# Stack the images into a single batch\n",
     "image_batch = jnp.stack(images_list, axis=0)\n",
     "\n",
-    "print(f\"✅ Loaded a batch of 10 images with shape: {image_batch.shape}\")"
+    "print(f\"Loaded a batch of 10 images with shape: {image_batch.shape}\")"
    ]
   },
   {
