Add notebook metadata for clean diff. [skip ci]

--- a/bonsai/models/unet/tests/UNet_segmentation_example.ipynb
+++ b/bonsai/models/unet/tests/UNet_segmentation_example.ipynb
@@ -835,7 +835,10 @@
  ],
  "metadata": {
   "jupytext": {
-   "default_lexer": "ipython3"
+   "cell_metadata_filter": "-all",
+   "default_lexer": "ipython3",
+   "formats": "ipynb,md:myst",
+   "main_language": "python"
   },
   "kernelspec": {
    "display_name": "bonsai",
