--- a/bonsai/models/vgg19/tests/VGG19_ImageNet_validation_example.ipynb
+++ b/bonsai/models/vgg19/tests/VGG19_ImageNet_validation_example.ipynb
@@ -370,7 +370,10 @@
    "provenance": []
   },
   "jupytext": {
-   "default_lexer": "ipython3"
+   "cell_metadata_filter": "-all",
+   "default_lexer": "ipython3",
+   "formats": "ipynb,md:myst",
+   "main_language": "python"
   },
   "kernelspec": {
    "display_name": "venv (3.12.8)",
