--- a/bonsai/models/efficientnet/tests/EfficientNet_ImageNet_validation_example.ipynb
+++ b/bonsai/models/efficientnet/tests/EfficientNet_ImageNet_validation_example.ipynb
@@ -229,7 +229,10 @@
  ],
  "metadata": {
   "jupytext": {
-   "default_lexer": "ipython3"
+   "cell_metadata_filter": "-all",
+   "default_lexer": "ipython3",
+   "formats": "ipynb,md:myst",
+   "main_language": "python"
   },
   "kernelspec": {
    "display_name": "venv (3.12.8)",
