--- a/bonsai/models/sam2/tests/SAM2_image_predictor_example.ipynb
+++ b/bonsai/models/sam2/tests/SAM2_image_predictor_example.ipynb
@@ -581,7 +581,10 @@
    "provenance": []
   },
   "jupytext": {
-   "default_lexer": "ipython3"
+   "cell_metadata_filter": "-all",
+   "default_lexer": "ipython3",
+   "formats": "ipynb,md:myst",
+   "main_language": "python"
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
